libsql-server/src/rpc/snapshots/sqld__rpc__streaming_exec__test__invalid_request.snap
---
source: libsql-server/src/rpc/streaming_exec.rs
expression: stream.next().await.unwrap().unwrap_err().to_string()
---
status: InvalidArgument, message: "invalid request", details: [], metadata: MetadataMap { headers: {} }
