libsql-server/src/rpc/snapshots/sqld__rpc__streaming_exec__test__perform_multiple_queries-2.snap
---
source: libsql-server/src/rpc/streaming_exec.rs
expression: stream.next().await.unwrap().unwrap()
---
{
  "request_id": 1,
  "response": {
    "ProgramResp": {
      "steps": [
        {
          "step": {
            "Init": {}
          }
        },
        {
          "step": {
            "BeginStep": {}
          }
        },
        {
          "step": {
            "ColsDescription": {
              "columns": []
            }
          }
        },
        {
          "step": {
            "BeginRows": {}
          }
        },
        {
          "step": {
            "FinishRows": {}
          }
        },
        {
          "step": {
            "FinishStep": {
              "affected_row_count": 1,
              "last_insert_rowid": 1
            }
          }
        },
        {
          "step": {
            "Finish": {
              "last_frame_no": null,
              "state": 0
            }
          }
        }
      ]
    }
  }
}
