libsql-server/src/rpc/snapshots/sqld__rpc__streaming_exec__test__query_number_less_than_previous_query.snap
---
source: libsql-server/src/rpc/streaming_exec.rs
expression: stream.next().await.unwrap().unwrap()
---
{
  "request_id": 0,
  "response": {
    "ProgramResp": {
      "steps": [
        {
          "step": {
            "Init": {}
          }
        },
        {
          "step": {
            "BeginStep": {}
          }
        },
        {
          "step": {
            "ColsDescription": {
              "columns": []
            }
          }
        },
        {
          "step": {
            "BeginRows": {}
          }
        },
        {
          "step": {
            "FinishRows": {}
          }
        },
        {
          "step": {
            "FinishStep": {
              "affected_row_count": 0,
              "last_insert_rowid": null
            }
          }
        },
        {
          "step": {
            "Finish": {
              "last_frame_no": null,
              "is_autocommit": true
            }
          }
        }
      ]
    }
  }
}
